# arcivis-gpui

./: .gitignore  .justfile  Cargo.toml  README.md
crates/gpug/: Cargo.toml
crates/gpug/examples/: kitchen_sink.rs
crates/gpug/src/: gpug.rs  graph.rs  node.rs
crates/gpug/src/generators/: utils.rs
crates/gpui-components/src/: menu_story.rs  title_bar.rs
crates/graph/: Cargo.toml
crates/graph/src/: main.rs
crates/graphview/: Cargo.toml  README.md
crates/graphview/examples/: kitchen_sink.rs
crates/graphview/src/: edge.rs  graph.rs  lib.rs  node.rs
crates/graphview/src/generators/: utils.rs
crates/layout/: Cargo.toml  README.md
crates/layout/src/: grid.rs  layout.rs  lib.rs  types.rs
crates/layout/tests/: layout.rs
crates/reqwest_client/: Cargo.toml
crates/story/src/: lib.rs
crates/viewer/: Cargo.toml  README.md
crates/viewer/src/: kdl.rs  main.rs
crates/viewer/tests/model/: example.hcl  vehicle.d2  vehicle.hcl  vehicle.kdl  vehicle.sysml  vehicle.toml  vehicle.yaml
doc/: convert_webm.sh
doc/layout/: README.md  custom.md
