[package]
name = "archviz-layout"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
petgraph = "0.6"
rand = "0.8"
tracing.workspace = true

[dev-dependencies]
svg = "0.13"
tracing-test.workspace = true