[package]
name = "archviz-layout"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
petgraph.workspace = true
rand.workspace = true
tracing.workspace = true

[dev-dependencies]
svg.workspace = true
tracing-test.workspace = true
