[package]
name = "reqwest_client"
version = "0.5.0"
license = "Apache-2.0"
publish = false
edition.workspace = true

[lints]
workspace = true

[features]
test-support = []

[lib]
path = "src/reqwest_client.rs"
doctest = true

[dependencies]
gpui.workspace = true
reqwest.workspace = true
anyhow.workspace = true
log.workspace = true

rustls.workspace = true
rustls-platform-verifier.workspace = true
bytes.workspace = true
futures.workspace = true
tokio.workspace = true
regex.workspace = true

[dev-dependencies]
gpui.workspace = true
